# mxlit

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: cgpa_calc.py  demo_app.py  demo_new_features.py  test_app.py  test_layouts.py  test_new_components.py  test_widgets.py
src/mxlit/: __init__.py  cli.py  context.py  server.py  state.py
src/mxlit/components/: charts.py  data.py  layout.py  media.py  status.py  text.py  widgets.py
src/mxlit/static/: style.css
src/mxlit/templates/: base.html  components.html
