[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxlit"
version = "0.1.0"
description = "A Streamlit alternative powered by FastAPI and HTMX"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pandas",
    "markdown"
]

[project.scripts]
mxlit = "mxlit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mxlit"]

[tool.hatch.build.targets.wheel.force-include]
"src/mxlit/static" = "mxlit/static"
"src/mxlit/templates" = "mxlit/templates"
