[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxlit"
version = "0.1.0"
description = "A Streamlit alternative powered by FastAPI and HTMX"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kalpit Bhawalkar", email = "kalpit@dolphins.dev" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pandas",
    "markdown"
]

[project.urls]
Homepage = "https://dolphins.dev/"
Repository = "https://github.com/kalpi-4/mxlit"
Issues = "https://github.com/kalpi-4/mxlit/issues"

[project.scripts]
mxlit = "mxlit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mxlit"]

[tool.hatch.build.targets.wheel.force-include]
"src/mxlit/static" = "mxlit/static"
"src/mxlit/templates" = "mxlit/templates"
